# watering_system

./: .gitmodules  LICENSE  config.json  pyproject.toml  test.py  water_ui.py
water_ui/: camera.py  config.py  cp210x.py  hardware.py  history.py  water_ui.py
